fix: dev server config
note, needs next version of pfe-tools

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
   <title>scope/repo Elements</title>
   <link rel="stylesheet" href="/docs/demo/demo.css">
   <link rel="stylesheet" href="/docs/main.css" />
-  <script type="module">
-    import 'html-include-element';
-    import 'api-viewer-element';
-    import '@vaadin/split-layout';
-    import '/docs/demo/demo.ts';
-  </script>
+  <script type="module" src="/docs/demo/demo.ts"></script>
 </head>
 
 <body>
